src/guestfs-actions.h

extern int guestfs_sleep (guestfs_h *handle, int secs);
extern int guestfs_ntfs_3g_probe (guestfs_h *handle, int rw, const char *device);
extern int guestfs_scrub_device (guestfs_h *handle, const char *device);
extern int guestfs_scrub_file (guestfs_h *handle, const char *file);
extern int guestfs_scrub_freespace (guestfs_h *handle, const char *dir);
extern int guestfs_wc_l (guestfs_h *handle, const char *path);
extern int guestfs_wc_w (guestfs_h *handle, const char *path);
extern int guestfs_wc_c (guestfs_h *handle, const char *path);